--- a/EasyInvoice/EasyInvoice.csproj
+++ b/EasyInvoice/EasyInvoice.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>e2616121-34e9-4eed-842d-d611061d0c53</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
